desactivacion mq 360-768px

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -245,7 +245,7 @@
 
 }
 
-/* Tablet-Ipad */
+/* Tablet-Ipad
 @media (min-width: 360px) and (max-width: 768px) {
     h1 {
         font-size: 4rem;
@@ -347,7 +347,7 @@
     form {
         display: none;
     }
-}
+} */
 
 @media (min-width: 768px) and (max-width: 900px) {
     h1 {
