margenes cards y descripciones en español

--- a/css/carrito.css
+++ b/css/carrito.css
@@ -1,22 +1,24 @@
 .contenedorCarrito{
     max-width: 120rem;
     padding: 1rem;
-    margin: auto;
+    margin: 4rem 10rem;
     display: flex;
     justify-content: space-between;
     /* oculto lo que queda fuera del .contenedor */
     contain: paint;
 }
-/* SECCION CONTENEDOR DE ITEMS */
+
+/* Estilos sección contenedor de items*/
 .contenedorCarrito .contenedor-items{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    grid-gap:3rem;
-    grid-row-gap: 3rem;
+    grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
+    grid-gap:4rem;
+    grid-row-gap: 5rem;
     /* width: 60%; */
     width: 100%;
     transition: .3s;
 }
+
 .contenedorCarrito .contenedor-items .item{
     max-width: 20rem;
     margin: auto;
@@ -25,14 +27,15 @@
     padding: 2rem;
     transition: .3s;
 }
+
 .contenedorCarrito .contenedor-items .item .img-item{
     width: 100%;
 }
+
 .contenedorCarrito .contenedor-items .item:hover{
     box-shadow: 0 0 1rem #666;
     scale: 1.05;
 }
-
 
 .contenedorCarrito .contenedor-items .item .titulo-item{
     display: block;
@@ -41,10 +44,12 @@
     text-transform: uppercase;
     font-size: 1.4rem;
     color:#333;
+    margin-bottom: 1rem;
+    line-height: 1.8rem;
 }
 
 .contenedorCarrito .contenedor-items .item:hover .titulo-item{
- color: #510081;
+    color: #510081;
 }
 
 .contenedorCarrito .contenedor-items .item .precio-item{
@@ -71,9 +76,7 @@
     background-color: #510081;
 }
 
-
-
-/* seccion carrito */
+/* Estilos Carrito */
 .carrito{
     border: 0.1rem solid #666;
     width: 35%;
@@ -88,7 +91,6 @@
     margin-right: -100%;
     opacity: 0;
 }
-
 
 .carrito .header-carrito{
     background-color: #000;
