--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ h2 {
     font-size: 4rem;
     margin-top: 2rem;
     margin-bottom: 2rem;
+    font-weight: 400;
 }
 
 h3 {
@@ -670,7 +671,7 @@ hr {
     grid-auto-rows: 50rem;
     padding: 2rem;
     grid-gap:4rem;
-    margin: 5rem 5rem 0rem 5rem;   
+    margin: 4rem 8rem 0rem 4rem;   
 }
 
 .categoria1{
