--- a/css/responsive.css
+++ b/css/responsive.css
@@ -435,6 +435,7 @@
     .botonBanner {
         margin-top: -7rem;
         margin-left: 9rem;
+        position:absolute;
     }
 
     .compraAqui {
