--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
 html {
     font-size: 62.5%;
     font-family: 'Roboto', sans-serif;
+    width: 100%;
+    min-height: 100vh;
 }
 
 /*Estilos estructura html*/
@@ -22,6 +24,7 @@ body {
     background-color: #FFFFFF;
     margin: 0;
     min-height: 100vh;
+    width: 100%;
     display: grid;
     grid-template-rows: auto 1fr auto;
 }
