--- a/css/responsive.css
+++ b/css/responsive.css
@@ -22,7 +22,7 @@
 
     .logo {
         height: 6.4rem;
-        width: 55%;
+        /* width: 55%; */
     }
 
     .menu {
@@ -313,7 +313,7 @@
 
     .logo {
         height: 6.8rem;
-        width: 80%;
+        /* width: 80%; */
     }
 
     .checkbtn {
@@ -435,7 +435,7 @@
 
     .logo {
         width: 90%;
-        height: 8rem;
+        /* height: 8rem; */
     }
 
     .checkbtn {
@@ -555,7 +555,7 @@
     }
 
     .logo {
-        width: 100%;
+        /* width: 100%; */
         height: 8.5rem;
     }
 
