--- a/css/responsive.css
+++ b/css/responsive.css
@@ -66,17 +66,17 @@
     }
 
     .seccionCategorias {
-        height: 68rem;
+        height: 60rem;
     }
 
     .seccionCategorias .main-card {
-        height: 50rem;             
+        height: 40rem;             
     }
 
     .main-card .contenedorCategorias {
         width: 100%;
-        height: 58rem;
-        margin: 2rem 1rem 0rem auto;
+        height: 38rem;
+        margin: 2rem 1rem 0rem 0rem;
     }
 
     .main-card .contenedorCategorias .categoria {
