--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,6 +4,7 @@
 @media (min-width: 320px) and (max-width: 360px) {
     h1 {
         font-size: 3rem;
+        margin-top: 1rem;
     }
 
     h2 {
@@ -66,7 +67,7 @@
     }
 
     .seccionCategorias {
-        height: 60rem;
+        height: 57rem;
     }
 
     .seccionCategorias .main-card {
@@ -76,7 +77,7 @@
     .main-card .contenedorCategorias {
         width: 100%;
         height: 38rem;
-        margin: 2rem 1rem 0rem 0rem;
+        margin: 3rem 1rem 0rem 0rem;
     }
 
     .main-card .contenedorCategorias .categoria {
