--- a/css/style.css
+++ b/css/style.css
@@ -364,8 +364,7 @@ span {
 
 /*Estilos contenedor Categorías*/
 .seccionCategorias {
-    background-color: #ecc6dd;
-   /*DANIELA height: 53rem;*/
+    background-color: #ecc6dd;  
     width: 100%;
     padding-bottom: 1rem;
     overflow: hidden;
@@ -375,7 +374,6 @@ span {
     width: 200%;
     display: flex;
     justify-content: space-evenly;
-   /* DANIELA animation: cambio 8s infinite alternate ease-in-out; */
     transition: all 1s ease;
 }
 
@@ -401,7 +399,6 @@ span {
     flex-wrap: wrap;
     justify-content: space-evenly;
     width: calc(100% / 2 - 1rem);
-    /* DANIELA margin: 9rem auto 6rem auto; */
     margin: 9rem 2rem 6rem 2rem;
 }
 
@@ -440,7 +437,7 @@ span {
     font-weight: bold;
     color: #510081;
     margin-inline: 7rem;
-    margin-top: 1rem; /*DANIELA margin-top: 2rem;*/
+    margin-top: 1rem; 
     padding: 0rem 3rem;
 }
 
@@ -459,8 +456,7 @@ span {
 .button label{
     height: 1.5rem;
     width: 1.5rem;
-    background:#7d2ae8;
-    /* DANIELA background:#fff; */
+    background:#7d2ae8;    
     margin: 0 0.4rem;
     border-radius: 2rem;
     transition: all 0.5s ease;
