--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-/*Media queries RD Mobile First*/
+/*Media queries*/
 
 /*Celular pequeño*/
 @media (min-width: 320px) and (max-width: 360px) {
@@ -557,7 +557,6 @@
     }
 
     .logo {
-        /* width: 100%; */
         height: 8.5rem;
     }
 
