--- a/css/responsive.css
+++ b/css/responsive.css
@@ -283,6 +283,14 @@
         width: 18rem;
     }
 
+    .contenedorNosotras {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-auto-rows: 40rem;
+        padding: 2rem;
+        margin: 2rem 8rem 6rem 8rem;
+    }
+
     .boton-item {
         font-size: 1rem;        
     }
@@ -290,6 +298,15 @@
     .categoriaBanner{
         display: none;
     }
+
+    .galeria-container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-auto-rows: 50rem;
+        padding: 2rem;
+        grid-gap: 4rem;
+        margin: 4rem 8rem 0rem 4rem;}
+        
 }
 
 /* Tablet-Ipad*/
