--- a/css/responsive.css
+++ b/css/responsive.css
@@ -307,27 +307,27 @@
         grid-gap: 4rem;
         margin: 4rem 8rem 0rem 4rem;}
 
-        .tituloProducto {
-            color: #510081;
-            font-size: 2.5rem;
-            text-align: left;
-            margin: 1rem 0rem;
-        }
+    .tituloProducto {
+        color: #510081;
+        font-size: 2.5rem;
+        text-align: left;
+        margin: 1rem 0rem;
+    }
 
         div.right {
-            padding: 2rem;
-            width: min-content;
-        }     
+        padding: 2rem;
+        width: min-content;
+    }     
        
-        .precio {
-            color: rgb(255, 31, 117);
-            font-size: 3rem;
-            text-align: left;
-            margin: 1rem 0rem;
-        }
+    .precio {
+        color: rgb(255, 31, 117);
+        font-size: 3rem;
+        text-align: left;
+        margin: 1rem 0rem;
+    }
 
     .slideProducto {
-            display: none;
+        display: none;
     }
 
     .flex {
@@ -337,7 +337,23 @@
         flex-wrap: nowrap;
         flex-direction: column-reverse;
     }
-        
+
+    .container form .row {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1.5rem;
+        border: none;
+    }
+
+    #pasarela {
+        display: block;
+        margin: auto 1.5rem;
+    }
+
+    
+
+    
+
 }
 
 /* Tablet-Ipad*/
@@ -504,7 +520,13 @@
         align-items: center;
         flex-direction:column-reverse ;
     }
-    
+
+    #pasarela {
+        display: block;
+        margin: auto 2rem;
+    }
+
+   
 }
  
 @media (min-width: 768px) and (max-width: 900px) 
@@ -620,6 +642,9 @@
         height: 30rem;
     }
     
+    #pasarela {
+        display: block;
+    }
 }
 
 @media (min-width: 900px) and (max-width: 1024px) 
@@ -776,6 +801,10 @@
         display: block;   
         width: 30rem;    
         height: 30rem;
+    }
+
+    #pasarela {
+        display: block;
     }
 }
 
