--- a/css/responsive.css
+++ b/css/responsive.css
@@ -347,8 +347,18 @@
 
     #pasarela {
         display: block;
-        margin: 2rem 1.5rem;
+        margin: 3rem 4rem 2rem 4rem;
     }
+
+    .container form .row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    border: none;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+}
 
     .contenedorBotonCierre{
         position: relative;
@@ -676,8 +686,15 @@
         height: 30rem;
     }
     
+    .flex {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 18.5rem;
+    }
+
     #pasarela {
         display: block;
+        margin: 3rem 5rem 2rem 5rem;
     }
 }
 
