--- a/css/responsive.css
+++ b/css/responsive.css
@@ -314,7 +314,7 @@
         margin: 1rem 0rem;
     }
 
-        div.right {
+    div.right {
         padding: 2rem;
         width: min-content;
     }     
@@ -333,9 +333,17 @@
     .flex {
         display: flex;
         justify-content: space-between;
-        margin: 0rem 5rem;
+        margin: 0rem 0rem;
         flex-wrap: nowrap;
         flex-direction: column-reverse;
+    }
+
+    .container form {
+        padding: 0rem 0rem;
+        width: 45rem;
+        background: #fff;
+        box-shadow: 0 0.5rem 1rem rgba(0,0,0,.1);
+        border-radius: 1.5rem;
     }
 
     .container form .row {
@@ -347,7 +355,7 @@
 
     #pasarela {
         display: block;
-        margin: 3rem 4rem 2rem 4rem;
+        margin: 1rem 2rem 1rem 2rem;
     }
 
     .container form .row {
@@ -543,13 +551,15 @@
     }
 
     .flex {
-        align-items: center;
-        flex-direction:column-reverse ;
+        display: flex;
+        justify-content: space-between;
+        margin: 0rem 0rem;
+        flex-wrap: wrap;       
     }
 
     #pasarela {
         display: block;
-        margin: auto 2rem;
+        margin: 1rem 2rem 1rem 2rem;
     }
 /* 
     .contenedorBotonCierre{
@@ -686,10 +696,11 @@
         height: 30rem;
     }
     
-    .flex {
+       .flex {
         display: flex;
         justify-content: space-between;
-        margin-top: 18.5rem;
+        margin: 0rem 0rem;
+        flex-wrap: wrap;       
     }
 
     #pasarela {
