--- a/css/responsive.css
+++ b/css/responsive.css
@@ -247,7 +247,6 @@
         height: 4.5rem;
     }
 
-
     #pie {
         padding: 0;
         height: fit-content;
@@ -378,6 +377,14 @@
         flex-direction: column-reverse;
     }
 
+    div.container {
+        display: flex;
+        justify-content: center;
+        align-items: center;      
+        min-height: 100vh;
+        background-color: transparent;
+    }
+
     .container form {
         padding: 0rem 0rem;
         width: 45rem;
@@ -396,6 +403,7 @@
     #pasarela {
         display: block;
         margin: 1rem 2rem 1rem 2rem;
+        border: solid #bfb9b9 0.2rem;
     }
 
     .container form .row {
@@ -718,9 +726,18 @@
         flex-wrap: wrap;       
     }
 
+    div.container {
+        display: flex;
+        justify-content: center;
+        align-items: center;      
+        min-height: 100vh;
+        background-color: transparent;
+    }
+
     #pasarela {
         display: block;
         margin: 1rem 2rem 1rem 2rem;
+        border: solid #bfb9b9 0.2rem;
     }
 }
 
